# automated-llm-eval

./: .gitignore  README.md  create_chat_completion.py  get_questions.py  main.py  model_analysis.py  model_performance.py  percentage_match_per_idx.csv  policy_mutation.csv  policy_mutation1.csv  policy_mutation_long.csv  policy_mutation_neg.csv  policy_mutation_track.csv  policy_tuning.py  prompts.py  prompts2.py  pyproject.toml  questions.txt  requirements.txt  visualize.py
automated_llm_eval/: accuracy_metrics.py  bundle_accuracy.py  chat_model.py  create_chat_completion.py  fleiss_kappa.py  general_helping_functions.py  get_data_helping_functions.py  main.py  message_helping_functions.py  model_analysis.py  model_performance.py  policy_helping_functions.py  policy_tuning.py  policy_tuning_corrective.py  policy_tuning_general.py  prompts.py  test.py  unused_visualizations.py  visualize.py
automated_llm_eval/utils/: __init__.py
notebooks/: dev_notebook.ipynb  dev_notebook.py
policies/: compare_policy.txt  redteaming_policy.txt  safety_policy.txt  summary_compare_completeness_policy.txt  summary_compare_conciseness_policy.txt  summary_compare_correctness_policy.txt
results/: html_writer.py
results/QA_test/: policy_mutation_iii.csv  policy_mutation_iii.csv.html  policy_mutation_iii.html.html
results/QA_test_neg_COT/: policy_mutation_iii.csv  policy_mutation_iii.csv.html  policy_mutation_iii.html.html
results/QAcheck_code_test_gpt4/: policy_mutation_None.csv
results/check_code_test/: policy_mutation_None.csv  policy_mutation_None.csv.html  policy_mutation_None.html.html  policy_mutation_iii.csv  policy_mutation_iii.csv.html  policy_mutation_iii.html.html
results/check_code_test_gpt4/: policy_mutation_iii.csv
results/check_overlap_neg_COT/: policy_mutation_iii.csv  policy_mutation_iii.csv.html  policy_mutation_iii.html.html
results/collapsed_vanDeen_dual_COT/: policy_mutation_chq.csv  policy_mutation_chq.csv.html  policy_mutation_chq.html.html  policy_mutation_iii.csv  policy_mutation_iii.csv.html  policy_mutation_iii.html.html  policy_mutation_pls.csv  (+2 more)
scored_examples/: safety_examples.py  simple_examples_harm.csv
venvTest/: pyproject.toml
(+145 files in other folders)
